refactor: 삼항 연산자 제거 및 BufferedReader를 try-with-resources에 포함